--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
-  "functions": {
-    "api/get-mpi-feed.js": {
-      "runtime": "@vercel/node@18.x"
-    }
+  "name": "mpi-feed-proxy",
+  "version": "1.0.0",
+  "description": "A private, reliable proxy for the MPI RSS feed.",
+  "dependencies": {
+    "fast-xml-parser": "4.2.5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
